// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandBlock test command block 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main commandBlock StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-start"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-variation-yaml"
    >
      test
    </p>
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-center StyledProps--flex-alignItems-center"
    >
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target bp3-popover-open"
        >
          <button
            aria-label="common.copied"
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
            tabindex="0"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-duplicate StyledProps--main"
              icon="duplicate"
            >
              <svg
                data-icon="duplicate"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  duplicate
                </desc>
                <path
                  d="M15 0H5c-.55 0-1 .45-1 1v2h2V2h8v7h-1v2h2c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1zm-4 4H1c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1zm-1 10H2V6h8v8z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
      <span
        class="bp3-icon StyledProps--main downloadBtn StyledProps--color StyledProps--color-primary7"
        data-icon="main-download"
      >
        <svg
          height="16"
          viewBox="0 0 14 14"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 0C3.1 0 0 3.1 0 7s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zm3.3 8.2L7.5 11c-.1.1-.3.2-.5.2s-.4-.1-.5-.2L3.7 8.2c-.1-.1-.2-.3-.2-.5 0-.4.3-.7.7-.7.2 0 .4.1.5.2l1.6 1.6V3.5c0-.4.3-.7.7-.7s.7.3.7.7v5.3l1.6-1.6c.1-.1.3-.2.5-.2.4 0 .7.3.7.7 0 .2-.1.4-.2.5z"
            fill="#4d5969"
          />
        </svg>
      </span>
      <a
        class="hide"
        download="commandBlock.txt"
        href="undefined"
        target="_blank"
      />
    </div>
  </div>
</div>
`;

exports[`CommandBlock test command block telemetry and other options 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main commandBlock StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-start"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-variation-yaml"
    >
      test
    </p>
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-center StyledProps--flex-alignItems-center"
    >
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target bp3-popover-open"
        >
          <button
            aria-label="common.copied"
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
            tabindex="0"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-duplicate StyledProps--main"
              icon="duplicate"
            >
              <svg
                data-icon="duplicate"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  duplicate
                </desc>
                <path
                  d="M15 0H5c-.55 0-1 .45-1 1v2h2V2h8v7h-1v2h2c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1zm-4 4H1c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1zm-1 10H2V6h8v8z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
      <span
        class="bp3-icon StyledProps--main downloadBtn StyledProps--color StyledProps--color-primary7"
        data-icon="main-download"
      >
        <svg
          height="16"
          viewBox="0 0 14 14"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 0C3.1 0 0 3.1 0 7s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zm3.3 8.2L7.5 11c-.1.1-.3.2-.5.2s-.4-.1-.5-.2L3.7 8.2c-.1-.1-.2-.3-.2-.5 0-.4.3-.7.7-.7.2 0 .4.1.5.2l1.6 1.6V3.5c0-.4.3-.7.7-.7s.7.3.7.7v5.3l1.6-1.6c.1-.1.3-.2.5-.2.4 0 .7.3.7.7 0 .2-.1.4-.2.5z"
            fill="#4d5969"
          />
        </svg>
      </span>
      <a
        class="hide"
        download="testname.xdf"
        href="undefined"
        target="_blank"
      />
    </div>
  </div>
</div>
`;
